RESOLVED FIXED165945
[EFL] Fix debug build break since r209873
https://bugs.webkit.org/show_bug.cgi?id=165945
Summary [EFL] Fix debug build break since r209873
Joonghun Park
Reported 2016-12-15 23:05:31 PST
Fix a build warning error below. Use Primitive System Data Type uint64_t instead of unsigned long long. In file included from ../../Source/WTF/wtf/StdLibExtras.h:33:0, from ../../Source/WTF/wtf/FastMalloc.h:26, from ../../Source/WebCore/config.h:75, from ../../Source/WebCore/Modules/indexeddb/IDBFactory.cpp:26: ../../Source/WebCore/Modules/indexeddb/IDBFactory.cpp: In member function ‘WebCore::ExceptionOr<WTF::Ref<WebCore::IDBOpenDBRequest> > WebCore::IDBFactory::openInternal(WebCore::ScriptExecutionContext&, const WTF::String&, long long unsigned int)’: ../../Source/WTF/wtf/Assertions.h:399:68: error: format ‘%lu’ expects argument of type ‘long unsigned int’, but argument 4 has type ‘long long unsigned int’ [-Werror=format=] #define LOG(channel, ...) WTFLog(&LOG_CHANNEL(channel), __VA_ARGS__) ^ ../../Source/WebCore/Modules/indexeddb/IDBFactory.cpp:103:5: note: in expansion of macro ‘LOG’ LOG(IndexedDBOperations, "IDB opening database: %s %" PRIu64, name.utf8().data(), version); ^ cc1plus: all warnings being treated as errors
Attachments
Joonghun Park
Comment 1 2016-12-15 23:10:45 PST
Note You need to log in before you can comment on or make changes to this bug.