[EFL] Fix debug build break since r209873. Unreviewed. https://bugs.webkit.org/show_bug.cgi?id=165945

No new tests, no new behaviours.

Use Primitive System Data Type uint64_t instead of unsigned long long.

* Modules/indexeddb/IDBFactory.cpp:
(WebCore::IDBFactory::openInternal):
* Modules/indexeddb/IDBFactory.h:

Canonical link: https://commits.webkit.org/183545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209912 268f45cc-cd09-0410-ab3c-d52691b4dbfc